gcc/testsuite/gfortran.dg/pr77415_1.f90
integer function f()
   f(g) = 0       ! { dg-error "Statement function" }
contains
   integer function g()
   end
end
